--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test:accessibility": "node scripts/test-accessibility.js",
+    "audit:accessibility": "npx lighthouse http://localhost:3000 --only-categories=accessibility --output=json --output-path=./accessibility-audit.json"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^3.22.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "framer-motion": "^12.23.6",
     "graphql": "^16.11.0",
     "next": "15.4.1",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,6 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
