--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
