--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "test:accessibility": "node scripts/test-accessibility.js",
     "audit:accessibility": "npx lighthouse http://localhost:3000 --only-categories=accessibility --output=json --output-path=./accessibility-audit.json"
   },
@@ -28,12 +30,17 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "prettier": "^3.6.2",
     "typescript": "^5"
   }
